Fixed collapse 'invisible' class not working outside of left sidebar

--- a/regulations/static/regulations/css/main.css
+++ b/regulations/static/regulations/css/main.css
@@ -13679,6 +13679,10 @@ footer .footer-left {
   padding: 0;
 }
 
+.invisible {
+  height: 0px !important;
+}
+
 .indicator {
   background: #026666;
   text-transform: uppercase;
@@ -14814,9 +14818,6 @@ aside.left-sidebar {
   top: 0;
   z-index: 1;
   transition: flex-basis 0.25s ease-out;
-}
-aside.left-sidebar .invisible {
-  height: 0px !important;
 }
 aside.left-sidebar[data-state=collapsed] {
   width: 1em;
