--- a/regulations/static/regulations/css/scss/_layout.scss
+++ b/regulations/static/regulations/css/scss/_layout.scss
@@ -157,3 +157,7 @@ footer {
         padding: 0;
     }
 }
+
+.invisible {
+    height: 0px !important;
+}
